--- a/development.ini
+++ b/development.ini
@@ -7,14 +7,14 @@
 
 
 
-[app:main]
+[app:ss_sesan]
 use = egg:ss_sesan
 
 
 mail.server = smtp.gmail.com
 mail.port = 587
-mail.user = mail@gmail.com
-mail.password = pwd
+mail.user = sesan.sala@gmail.com
+mail.password = SalaSituacional
 
 
 pyramid.reload_templates = true
@@ -32,22 +32,24 @@ pyramid.includes = pyramid_debugtoolbar
 # wsgi server configuration
 ###
 
-#
+#/root/allan/SESAN_QLANDS/ss_sesan
 #Database Configuration
 #localhost
-mysql.host = localhost
+#mysql.host = localhost
+#mysql.port = 3306
+#mysql.user = root
+#mysql.password = inspinia4
+##linode
+
+mysql.host = 190.111.0.168
 mysql.port = 3306
-mysql.user = r
-mysql.password = i
-#linode
-#mysql.host = 
-#mysql.port = 
-#mysql.user = sesan
-#mysql.password = 
+mysql.user = ssm
+mysql.password = Tecno1976
+
 #----------------------------
 
 #mysql.password = dbcchieg
-mysql.schema = sesan_v2
+mysql.schema = sesan_dev
 mysql.cnf = %(here)s/mysql.cnf
 
 jinja2.extensions = ss_sesan.processes.jinja_extensions.SnippetExtension
@@ -58,29 +60,35 @@ fanstatic.publisher_signature = fanstatic
 fanstatic.use_application_uri = true
 
 #This is used by the authoization framework module to encrypt comunications
-auth.secret = 
+auth.secret = ENg!yz@d_r
 
 #Opaque is a permanet key passes thorugh a Digest Authorization
-auth.opaque = 
+auth.opaque = 5ccc069c403ebaf9f0171e9517f40e41
 auth.realm = odkuser@climmob.net
 #http://192.155.81.175/kml/ALOTENANGO_5.kml
 
-user.repository = /
-odktools.path = /
+#user.repository = /home/acoto/sesan_repo/
+#odktools.path = /home/acoto/pr_odktools18/odktools
 
 #user.repository = /home/allan/sesan_ss/sesan_repo/
 #odktools.path = /home/allan/sesan_ss/odktools
 
+user.repository = /home/itadmin/ssm_sys/sesan_repo/
+odktools.path = /home/itadmin/ssm_sys/odktools
+
+
+[composite:main]
+use=egg:rutter#urlmap
+/ =ss_sesan
 
 [server:main]
-use = egg:waitress#main
-listen = 0.0.0.0:6542
-
+#use = egg:waitress#main
+#listen = 0.0.0.0:6542
 
 use = egg:gunicorn
-host = 0.0.0.0
-port = 5900
-workers = 1
+host = 192.168.1.20
+port = 5901
+workers = 3
 worker_class = gevent
 
 
@@ -109,6 +117,11 @@ handlers = console
 level = DEBUG
 handlers =
 qualname = ss_sesan
+
+[logger_composite]
+level = WARN
+handlers =
+qualname =composite
 
 
 [handler_console]
